fix: prevent summary segment overflow

--- a/src/style-flight-segment.scss
+++ b/src/style-flight-segment.scss
@@ -37,7 +37,8 @@
 }
 
 // the first line is only half as long
-:host(:first-child) .wrapper::before {
+:host(:first-child) .wrapper::before,
+:host(:only-of-type) .wrapper::before {
   width: 50%;
 }
 
